Update calculator project with style, structural, and functional changes
Added style rules in CSS, created structural layout in HTML and developed basic functionality for number pad on the calculator in JavaScript. The styling and structure creation are done to lay the groundwork for the calculator project. Number pad functionality serves as a starting point for further functionality development.

--- a/projects/calculator-project/index.html
+++ b/projects/calculator-project/index.html
@@ -6,5 +6,12 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <div id="screen"></div>
+      <div id="number-pad">
+        <div id="numbers"></div>
+      </div>
+    </div>
+  </body>
 </html>
