Add functionality and styles to calculator project
Included additional functionality to the calculator project. Added screen display, 'equals' and 'clear' buttons to the html file and corresponding scripts to handle their functionality. Adjusted styles to accommodate these changes and improve overall UI/UX.

--- a/projects/calculator-project/index.html
+++ b/projects/calculator-project/index.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <div id="container">
-      <div id="screen"></div>
+      <div id="screen">
+        <p id="screenText"></p>
+      </div>
       <div id="number-pad">
         <div id="numbers"></div>
         <div id="symbols"></div>
