--- a/projects/calculator-project/index.html
+++ b/projects/calculator-project/index.html
@@ -17,9 +17,15 @@
       <div id="screen">
         <p id="screenText"></p>
       </div>
-      <div id="number-pad">
-        <div id="numbers"></div>
-        <div id="symbols"></div>
+      <div id="buttons">
+        <div id="control-btn">
+          <button id="clear">Clear</button>
+          <button id="delete">Delete</button>
+        </div>
+        <div id="number-pad">
+          <div id="numbers"></div>
+          <div id="symbols"></div>
+        </div>
       </div>
     </div>
   </body>
