Add name attribute to buttons and remove debug log
The HTML buttons for clear and delete operations now have name attributes aligning with their IDs. Additionally, an unnecessary console log within the JavaScript file's click event listener has been removed, effectively cleaning up the debug code.

--- a/projects/calculator-project/index.html
+++ b/projects/calculator-project/index.html
@@ -19,8 +19,8 @@
       </div>
       <div id="buttons">
         <div id="control-btn">
-          <button id="clear">Clear</button>
-          <button id="delete">Delete</button>
+          <button id="clear" name="clear">Clear</button>
+          <button id="delete" name="delete">Delete</button>
         </div>
         <div id="number-pad">
           <div id="numbers"></div>
