--- a/projects/calculator-project/index.html
+++ b/projects/calculator-project/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="container">
       <div id="screen">
-        <p id="screenText"></p>
+        <p id="screenText">0</p>
       </div>
       <div id="buttons">
         <div id="control-btn">
