Update calculator to handle operation symbols
The calculator layout has been updated to display operation symbols along with the entered numbers. The JavaScript for the calculator has been significantly refactored to store the first number, operator, and second number in separate variables. Also, functions have been added to handle the different steps of a calculation. Now, the calculator can handle complex operations. The CSS was also updated to account for the changes in the layout.

--- a/projects/calculator-project/index.html
+++ b/projects/calculator-project/index.html
@@ -15,7 +15,11 @@
   <body>
     <div id="container">
       <div id="screen">
-        <p id="screenText">0</p>
+        <p id="screenTextFull"></p>
+        <div id="screenTextContainer">
+          <p id="screenTextSymbol">+</p>
+          <p id="screenText">0</p>
+        </div>
       </div>
       <div id="buttons">
         <div id="control-btn">
