Add layout and styling to Sign Up form
Added two div containers to the Sign Up form's `index.html` file: one for an image and one for the actual sign-up form. Also, respective styling has been added to the `style.css` file, ensuring a responsive and visually appealing layout for the form.

--- a/full-stack-js/projects/sign-up-form/index.html
+++ b/full-stack-js/projects/sign-up-form/index.html
@@ -6,5 +6,10 @@
     <meta charset="UTF-8" />
     <title>Sign Up Form</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="image-container"></div>
+      <div class="signup-container"></div>
+    </div>
+  </body>
 </html>
