--- a/full-stack-js/html-css/projects/sign-up-form/index.html
+++ b/full-stack-js/html-css/projects/sign-up-form/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="image-container"></div>
+      <div class="image-container">
+        <div class="logo-container">
+          <img src="assets/logo.png" alt="logo" class="logo-img" />
+          <p class="logo-text">ODIN</p>
+        </div>
+      </div>
       <div class="signup-container"></div>
     </div>
   </body>
