Add functionality to add a book and update UI
A function has been introduced to add a book to the library in the javascript file. The HTML file is updated with a new container, header, and a form inside a modal that takes user input for adding a book. Also, changes have been made in the CSS file, resetting the body's padding and margin.

--- a/full-stack-js/javascript/projects/library-app/index.html
+++ b/full-stack-js/javascript/projects/library-app/index.html
@@ -6,5 +6,38 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <header id="header">
+        <p id="title">Library</p>
+        <button id="add-btn">Add book</button>
+      </header>
+      <div id="book-container"></div>
+    </div>
+    <div id="modal">
+      <form>
+        <input
+          type="text"
+          placeholder="Book title"
+          name="title"
+          id="title-input"
+          aria-label="Book Title"
+        />
+        <input
+          type="text"
+          placeholder="Author"
+          name="author"
+          id="author-input"
+          aria-label="Author"
+        />
+        <input
+          type="text"
+          placeholder="Number of pages"
+          name="pages"
+          id="pages-input"
+          aria-label="Pages"
+        />
+      </form>
+    </div>
+  </body>
 </html>
