Add book cards and enhance modal display
Added functionality to display books as cards in a grid layout, providing users a better preview of the available books. Modified the form event listener from 'click' to 'submit' to capture the form data properly. Also made enhancements to the modal window display and position, hence improving user interaction.

--- a/full-stack-js/javascript/projects/library-app/index.html
+++ b/full-stack-js/javascript/projects/library-app/index.html
@@ -37,6 +37,7 @@
           id="pages-input"
           aria-label="Pages"
         />
+        <input type="checkbox" name="read" id="read-input" aria-label="Read" />
         <input type="submit" value="Add" />
       </form>
     </div>
