--- a/full-stack-js/javascript/projects/library-app/index.html
+++ b/full-stack-js/javascript/projects/library-app/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <title>Library</title>
     <script src="script.js" defer></script>
@@ -22,6 +28,7 @@
           name="title"
           id="title-input"
           aria-label="Book Title"
+          required
         />
         <input
           type="text"
@@ -29,6 +36,7 @@
           name="author"
           id="author-input"
           aria-label="Author"
+          required
         />
         <input
           type="number"
@@ -36,8 +44,17 @@
           name="pages"
           id="pages-input"
           aria-label="Pages"
+          required
         />
-        <input type="checkbox" name="read" id="read-input" aria-label="Read" />
+        <div>
+          <label for="read-input">Read the book?</label>
+          <input
+            type="checkbox"
+            name="read"
+            id="read-input"
+            aria-label="Read"
+          />
+        </div>
         <input type="submit" value="Add" />
       </form>
     </div>
