--- a/foundations/projects/etch-a-sketch/index.html
+++ b/foundations/projects/etch-a-sketch/index.html
@@ -5,18 +5,30 @@
     <title>Etch-a-sketch</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="grid-container"></div>
     <div id="inputs">
       <div id="grid-size">
-        <input id="grid-input" type="number" aria-label="grid-size" />
+        <input
+          id="grid-input"
+          type="number"
+          aria-label="grid-size"
+          placeholder="Number between 1-100"
+        />
         <button id="grid-size-btn">Set grid size</button>
+        <button id="clear">Clear grid</button>
       </div>
       <div id="colors">
         <input type="color" id="color-picker" aria-label="color-picker" />
-        <div>
-          <label for="random-checkbox">Random colors</label>
+        <div id="random-inputs">
+          <label for="random-checkbox">Random colors:</label>
           <input
             type="checkbox"
             id="random-checkbox"
