--- a/full-stack-js/javascript/projects/tic-tac-toe/index.html
+++ b/full-stack-js/javascript/projects/tic-tac-toe/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="container">
+      <div id="texts">aaads</div>
       <div id="game-board"></div>
     </div>
   </body>
