--- a/full-stack-js/javascript/projects/tic-tac-toe/index.html
+++ b/full-stack-js/javascript/projects/tic-tac-toe/index.html
@@ -5,10 +5,20 @@
     <title>TicTacToe</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="container">
-      <div id="texts">aaads</div>
+      <div id="texts">
+        <p id="player-x">Player X</p>
+        <p id="status"></p>
+        <p id="player-o">Player O</p>
+      </div>
       <div id="game-board"></div>
     </div>
   </body>
