Add rematch feature and improve UI/UX
- Introduced a "Rematch" button to reset the game
- Enhanced game board styling with new CSS properties
- Added animations for player moves
- Refactored game initialization logic for better code reusability
- Updated gameplay logic to handle the new rematch feature

--- a/full-stack-js/javascript/projects/tic-tac-toe/index.html
+++ b/full-stack-js/javascript/projects/tic-tac-toe/index.html
@@ -20,6 +20,7 @@
         <p id="player-o">Player O</p>
       </div>
       <div id="game-board"></div>
+      <button id="rematch" type="button">Rematch</button>
     </div>
   </body>
 </html>
