Update library app with class enhancements
- Add missing newline in `script.js` for readability
- Update HTML title to 'Library with classes' for better description

--- a/full-stack-js/javascript/exercises/library-app-with-classes/index.html
+++ b/full-stack-js/javascript/exercises/library-app-with-classes/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
-    <title>Library</title>
+    <title>Library with classes</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
