--- a/full-stack-js/javascript/exercises/library-app-with-classes/index.html
+++ b/full-stack-js/javascript/exercises/library-app-with-classes/index.html
@@ -9,7 +9,7 @@
     />
     <meta charset="UTF-8" />
     <title>Library with classes</title>
-    <script src="script.js" defer></script>
+    <script type="module" src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
