Add interactive dropdown menu
- Updated HTML structure with dropdown and items.
- Implemented JS to handle dropdown interactions.
- Added CSS styles for dropdown appearance.

--- a/full-stack-js/javascript/exercises/dynamic-user-interaction/dropdown-menu/src/template.html
+++ b/full-stack-js/javascript/exercises/dynamic-user-interaction/dropdown-menu/src/template.html
@@ -5,6 +5,15 @@
     <title>Dropdown</title>
   </head>
   <body>
-    <p>aaa</p>
+    <div id="dropdown">
+      <p class="dropdown-title">Dropdown</p>
+      <div class="dropdown-items">
+        <p class="item">Item 1</p>
+        <p class="item">Item 2</p>
+        <p class="item">Item 3</p>
+        <p class="item">Item 4</p>
+        <p class="item">Item 5</p>
+      </div>
+    </div>
   </body>
 </html>
