Add image carousel feature
- Added image assets (img1.png, img2.png, img3.png, img4.png)
- Implemented image carousel in `index.js`
- Updated `template.html` for carousel structure
- Styled carousel in `styles.css`

--- a/full-stack-js/javascript/exercises/dynamic-user-interaction/image-carousel/src/template.html
+++ b/full-stack-js/javascript/exercises/dynamic-user-interaction/image-carousel/src/template.html
@@ -5,6 +5,20 @@
     <title>Image Carousel</title>
   </head>
   <body>
-    <div id="carousel"></div>
+    <div id="container">
+      <div id="carousel">
+        <div id="arrows">
+          <div class="back"><</div>
+          <div class="forward">></div>
+        </div>
+        <div id="image"></div>
+      </div>
+      <div id="dots">
+        <p class="dot">&bull;</p>
+        <p class="dot">&bull;</p>
+        <p class="dot">&bull;</p>
+        <p class="dot">&bull;</p>
+      </div>
+    </div>
   </body>
 </html>
