--- a/full-stack-js/javascript/exercises/dynamic-user-interaction/image-carousel/src/template.html
+++ b/full-stack-js/javascript/exercises/dynamic-user-interaction/image-carousel/src/template.html
@@ -14,10 +14,10 @@
         <div id="image"></div>
       </div>
       <div id="dots">
-        <p class="dot">&bull;</p>
-        <p class="dot">&bull;</p>
-        <p class="dot">&bull;</p>
-        <p class="dot">&bull;</p>
+        <p class="dot" data-dot="0">&bull;</p>
+        <p class="dot" data-dot="1">&bull;</p>
+        <p class="dot" data-dot="2">&bull;</p>
+        <p class="dot" data-dot="3">&bull;</p>
       </div>
     </div>
   </body>
