Update Weather App UI and Fetch Weather Data
- Added Roboto font to styles.css and updated general styling
- Implemented search functionality in index.js
- Integrated weather API to fetch and display weather data
- Modified template.html to include search input and button, weather data display area

--- a/full-stack-js/javascript/projects/weather-app/src/template.html
+++ b/full-stack-js/javascript/projects/weather-app/src/template.html
@@ -11,6 +11,14 @@
     />
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+      <div id="search-container">
+        <input id="search-input" type="text" aria-label="location-input" />
+        <button id="search-button">Search</button>
+      </div>
+      <div id="weather-data">
+        <table id="weather-table"></table>
+      </div>
+    </div>
   </body>
 </html>
