Refactor weather data display
- Replace weather table with a div to improve flexibility
- Implement `addRow` function to dynamically add daily weather data
- Update imports and relevant DOM elements in `index.js`
- Modify HTML structure to replace table with div

--- a/full-stack-js/javascript/projects/weather-app/src/template.html
+++ b/full-stack-js/javascript/projects/weather-app/src/template.html
@@ -17,7 +17,7 @@
         <button id="search-button">Search</button>
       </div>
       <div id="weather-data">
-        <table id="weather-table"></table>
+        <div id="weather-row"></div>
       </div>
     </div>
   </body>
